2008-09-23  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.24.0 for release

2008-09-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.92 for release

2008-09-08 Andreas Nilsson <andreas@imendio.com>
	
	* {16x16,22x22,24x24,32x32,scalable}/apps/preferences-desktop-accessibility:
	Changed the metaphor of the accessibility icon as requested by the a11y team.	

2008-08-29  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.91 for release

2008-08-18  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.90 for release

2008-08-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* scalable/places/Makefile.am: Fixed typo that broke the
	build: user-bookmark should be user-bookmarks.

2008-08-13  Andreas Nilsson  <andreas@imendio.com>

	* {16x16,22x22,24x24,32x32,scalable}/places/user-bookmarks.png:
	added user-bookmarks icon based on bookmark-new

2008-07-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.3 for release

2008-06-17  Lapo Calamandrei  <calamandrei@gmail.com>

	* {32x32,48x48}/actions/zoom* : little refresh for a more consistent look.

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-settings-default-applications.png:
	Remove this icon which is no longer needed

	Fixes #538474

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Fix the help text for icon-mapping to say auto instead of $mapenable

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.2 for release

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* */apps/Makefile.am:
	* */apps/boot.*:
	Remove this from 16x16 and 22x22 as well

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* */actions/Makefile.am:
	* */apps/Makefile.am:
	* */actions/system-shutdown.*:
	* */apps/gnome-shutdown.*:
	Move the apps/gnome-shutdown icon to actions/system-shutdown
