@@ -110,7 +110,6 @@ scalable/Makefile
 22x22/places/Makefile
 22x22/status/Makefile
 24x24/actions/Makefile
-24x24/animations/Makefile
 24x24/apps/Makefile
 24x24/categories/Makefile
 24x24/devices/Makefile
@@ -148,7 +147,6 @@ scalable/Makefile
 32x32/stock/Makefile
 32x32/stock/generic/Makefile
 48x48/actions/Makefile
-48x48/animations/Makefile
 48x48/apps/Makefile
 48x48/devices/Makefile
 48x48/filesystems/Makefile
