@@ -1,3 +1,7 @@
+2009-01-26  Jakub Steiner <jimmac@ximian.com>
+
+	* process-working: replace the spinner. Addresses bug #558367
+
 2008-09-23  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* configure.in:
